manifests/app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2024-03-15T17:06:58Z"
  labels:
    app: springboot-docker
    app.kubernetes.io/component: springboot-docker
    app.kubernetes.io/instance: springboot-docker
  name: springboot-docker
  namespace: arij-project
  resourceVersion: "9402281"
  uid: cac74afd-fd9e-4068-bef4-c95862f2290e
spec:
  host: springboot-docker-arij-project.apps.ocp4.smartek.ae
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: springboot-docker
    weight: 100
  wildcardPolicy: None
