manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: "2024-03-15T17:04:08Z"
  labels:
    app: springboot-docker
    app.kubernetes.io/component: springboot-docker
    app.kubernetes.io/instance: springboot-docker
  name: springboot-docker
  namespace: arij-project
  resourceVersion: "9400992"
  uid: 2d26a36e-409c-4e38-b0c8-32a8b4a96550
spec:
  clusterIP: 172.30.206.184
  clusterIPs:
  - 172.30.206.184
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: springboot-docker
  sessionAffinity: None
  type: ClusterIP
