manifests/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: "2024-03-15T16:58:30Z"
  labels:
    app: mysql-docker
    app.kubernetes.io/component: mysql-docker
    app.kubernetes.io/instance: mysql-docker
  name: mysql-docker
  namespace: arij-project
  resourceVersion: "9398570"
  uid: 6c49f7fb-ddff-4655-ae0b-768c25454284
spec:
  clusterIP: 172.30.117.38
  clusterIPs:
  - 172.30.117.38
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 3306-tcp
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    deployment: mysql-docker
  sessionAffinity: None
  type: ClusterIP
